# israacontrolplane

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.streamlit  README.md  debug_confidence_check.py  debug_guardrails.py  debug_import.py  debug_imports.py  debug_replay.py  debug_system.py  debug_traceback.py  docker-compose.yml  launcher.py  nginx.conf  package-lock.json  reproduce_logging.py  requirements.txt  start_all.py  test_auth.py  test_backend.py  test_guardrails_direct.py  test_guardrails_e2e.py  test_guardrails_wrapper.py  test_llm_integration.py  verify_alerts.py  verify_confidence.py  verify_full_flow.py  verify_guardrails.py  verify_logging_flow.py  verify_prompts.py  verify_validation.py
ai-confidence/: README.md  pyproject.toml  run_prompt.py
ai-confidence/app/: api_models.py  config.py  jobs.py  main.py  store.py
ai-confidence/data/eval/: ground_truths.jsonl  samples.jsonl
ai-confidence/src/ai_confidence/: __init__.py  datasets.py  heuristics.py  judge.py  judge_azure.py  llm_client_azure.py  models.py  pii.py  pipeline.py  prompts.py  ragas_adapter.py  routing.py  scorer.py
app/: .env.example  charts.py  client.py  generate_demo_data.py  guardrails_config.md  guardrails_custom.py  guardrails_wrapper.py  ingest.py  launcher.py  llm.py  main.py  observability.py  prompt_builder.py  retrieve.py  validation.py
app/pipeline/: interfaces.py  pipeline.py
app/services/: confidence.py
demo_data/internal/: gtm_plan_2026.md  pipeline.csv  product_catalog.csv  sales_history.xlsx  sales_targets.xlsx
(+76 files in other folders)
