[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-confidence"
version = "0.2.0"
description = "LLM confidence scoring (Azure OpenAI) with FastAPI control plane + async RAGAS"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.30.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0"
]

[project.optional-dependencies]
ragas = [
    "ragas",
    "datasets"
]

[tool.setuptools.packages.find]
where = ["src"]
